<resources>
    <string name="app_name">iTunesAPITestTask</string>

    <string name="releaseDate">Release Date</string>
    <string name="genre">Genre</string>
    <string name="price">Price</string>
    <string name="copyright">Copyrights</string>
    <string name="track_count">Tracks</string>
    <string name="free">Free</string>
    <string name="songs_list">Song\'s list</string>
    <string name="search_tip">Enter artist or album name for search</string>



</resources>
